Fix user home page styling causing page to overflow

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
   position: relative;
   bottom: 0;
